--- a/public/tuiter/edit-profile.html
+++ b/public/tuiter/edit-profile.html
@@ -1,10 +1,106 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <title>$Title$</title>
+    <meta charset="UTF-8">
+    <title>Edit Profile</title>
 </head>
 <body>
-$END$
+
+<table>
+
+    <tbody>
+
+    <tr valign="top">
+
+        <td colspan="3">
+
+            <!-- header -->
+
+        </td>
+
+    </tr>
+
+    <tr valign="top">
+
+        <td>
+
+            <!-- left sidebar -->
+            <h2>Navigation</h2>
+
+            <ul>
+                <li><a href="home.html">Home</a></li>
+                <li><a href="notifications.html">Notifications</a></li>
+                <li><a href="Bookmarks.html">Bookmarks</a></li>
+                <li><a href="Lists.html">Lists</a></li>
+                <li><a href="Profile.html">Profile</a></li>
+                <li><a href="Tuit.html">Tuit</a></li>
+                <li><a href="Reply.html">Reply</a></li>
+            </ul>
+
+        </td>
+
+        <td>
+
+            <!-- main content -->
+            <br/><br/>
+            <a href="profile.html">Back</a>
+
+            <h1>
+                Tuiter
+            </h1>
+
+            <h2>
+                Edit Profile
+            </h2>
+
+            <a href="profile.html">Save</a>
+
+            <img src="bobBanner.jpg"
+                 width="100%"
+                 height="200px"/>
+            <input type="file"/>
+            <br/>
+            <img src="bob.jpg"
+                 width="48px"
+                 height="48px"/>
+            <br/>
+            <input type="file"/>
+            <hr>
+
+            <form id="text-fields">
+                <label for="text-fields-name">Name</label>
+                <input id="text-fields-name" placeholder="WebDev"/>
+                <hr>
+                <textarea cols="50"
+                          rows="10"
+                          style="align-content:center">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+    </textarea>
+            </form>
+
+        </td>
+
+        <td>
+
+            <!-- right sidebar -->
+
+        </td>
+
+    </tr>
+
+    <tr valign="top">
+
+        <td colspan="3">
+
+            <!-- footer -->
+
+        </td>
+
+    </tr>
+
+    </tbody>
+
+</table>
+
+
 </body>
 </html>
