--- a/public/tuiter/home.html
+++ b/public/tuiter/home.html
@@ -1,10 +1,194 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <title>$Title$</title>
+    <meta charset="UTF-8">
+    <title>Home</title>
 </head>
 <body>
-$END$
+
+<table>
+
+    <tbody>
+
+    <tr valign="top">
+        <td colspan="3">
+            <!-- header -->
+        </td>
+
+    </tr>
+
+    <tr valign="top">
+
+        <td>
+
+            <!-- left sidebar -->
+            <h2>Navigation</h2>
+            <ul>
+                <li><a href="home.html">Home</a></li>
+                <li><a href="notifications.html">Notifications</a></li>
+                <li><a href="Bookmarks.html">Bookmarks</a></li>
+                <li><a href="Lists.html">Lists</a></li>
+                <li><a href="Profile.html">Profile</a></li>
+                <li><a href="Tuit.html">Tuit</a></li>
+                <li><a href="Reply.html">Reply</a></li>
+            </ul>
+
+        </td>
+
+        <td>
+
+            <!-- main content -->
+            <br/><br/>
+            <a href="navigation.html">Return to navigation page</a>
+
+            <h1>
+                Tuiter
+            </h1>
+
+            <h2>
+                Home
+            </h2>
+
+            <img src="bob.jpg"
+                 width="48px"
+                 height="48px"/>
+
+            <form id="textarea">
+    <textarea cols="20"
+              rows="2"
+              placeholder="What's happening?"
+    ></textarea>
+            </form>
+
+            <label for="who-can-reply">
+            </label><br/>
+            <select id="who-can-reply">
+                <option selected value="EVERYONE">Everyone can reply</option>
+                <option value="FOLLOWING">People you follow</option>
+                <option value="MENTIONED">Only people you mention</option>
+            </select>
+
+            <br/>
+            <hr>
+
+            <button type="button">Choose File</button>
+            No file chosen&emsp;&emsp;
+
+            <button type="button">Tuit</button>
+            <hr>
+
+            <ul>
+                <li><a href="topic123.html">Topic 123</a>
+                    <br/>
+                    <img src="alice.jpg"
+                         width="48px"
+                         height="48px"/>
+                    <a href="profile.html">Katie</a> @katie - 2h
+                    <br/>
+                    <p>
+                        Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod
+                        tempor
+                        incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis
+                        nostrud
+                        exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis
+                        aute irure
+                        dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla
+                        pariatur.
+                        Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia
+                        deserunt
+                        mollit anim id est laborum.
+                    </p>
+                    <a href="reply.html">Reply</a> | 123
+                    <a href="retuit.html">Retuit</a> | 234
+                    <a href="like.html">Like</a> | 345
+                    <a href="share.html">Share</a>
+                </li>
+                <br/>
+                <li><a href="topic123.html">Topic 234</a>
+                    <br/>
+                    <img src="dobby.jpg"
+                         width="48px"
+                         height="48px"/>
+                    <a href="profile.html">Dobby</a> @dobby - 4h
+                    <br/>
+                    <p>
+                        Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod
+                        tempor
+                        incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis
+                        nostrud
+                        exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis
+                        aute irure
+                        dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla
+                        pariatur.
+                        Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia
+                        deserunt
+                        mollit anim id est laborum.
+                    </p>
+                    <a href="reply.html">Reply</a> | 123
+                    <a href="retuit.html">Retuit</a> | 234
+                    <a href="like.html">Like</a> | 345
+                    <a href="share.html">Share</a>
+                </li>
+
+                <br/>
+
+                <li><a href="topicVideo.html">Topic Video</a>
+                    <br/>
+                    <img src="dobby.jpg"
+                         width="48px"
+                         height="48px"/>
+                    <a href="profile.html">Dobby</a> @dobby - 13h
+                    <br/>
+
+                    <iframe width="560" height="315" src="https://www.youtube.com/embed/lVkKLf4DCn8"
+                            title="Taylor Swift - I Can See You (Taylor’s Version) (From The Vault) (Official Video)"
+                            frameborder="0"
+                            allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+                            allowfullscreen></iframe>
+
+                    <p>
+                        Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod
+                        tempor
+                        incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis
+                        nostrud
+                        exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis
+                        aute irure
+                        dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla
+                        pariatur.
+                        Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia
+                        deserunt
+                        mollit anim id est laborum.
+                    </p>
+                    <a href="reply.html">Reply</a> | 123
+                    <a href="retuit.html">Retuit</a> | 234
+                    <a href="like.html">Like</a> | 345
+                    <a href="share.html">Share</a>
+                </li>
+            </ul>
+        </td>
+
+        <td>
+
+            <!-- right sidebar -->
+
+        </td>
+
+    </tr>
+
+    <tr valign="top">
+
+        <td colspan="3">
+
+            <!-- footer -->
+
+        </td>
+
+    </tr>
+
+    </tbody>
+
+</table>
+
+
 </body>
 </html>
