--- a/public/tuiter/profile.html
+++ b/public/tuiter/profile.html
@@ -1,10 +1,123 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <title>$Title$</title>
+    <meta charset="UTF-8">
+    <title>Profile</title>
 </head>
 <body>
-$END$
+
+<table>
+
+    <tbody>
+
+    <tr valign="top">
+
+        <td colspan="3">
+
+            <!-- header -->
+
+        </td>
+
+    </tr>
+
+    <tr valign="top">
+
+        <td>
+
+            <!-- left sidebar -->
+            <h2>Navigation</h2>
+
+            <ul>
+                <li><a href="home.html">Home</a></li>
+                <li><a href="notifications.html">Notifications</a></li>
+                <li><a href="Bookmarks.html">Bookmarks</a></li>
+                <li><a href="Lists.html">Lists</a></li>
+                <li><a href="Profile.html">Profile</a></li>
+                <li><a href="Tuit.html">Tuit</a></li>
+                <li><a href="Reply.html">Reply</a></li>
+            </ul>
+
+        </td>
+
+        <td>
+
+            <!-- main content -->
+            <br/><br/>
+            <a href="navigation.html">Back</a>
+
+            <h1>
+                Tuiter
+            </h1>
+
+            <h2>
+                Profile
+            </h2>
+
+            <img src="bobBanner.jpg"
+                 width="100%"
+                 height="200px"/>
+            <img src="bob.jpg"
+                 width="48px"
+                 height="48px"/>
+
+            <a href="edit-profile.html">Edit profile</a>
+            <h2>
+                WebDev
+            </h2>
+            <br/>
+            @WebDev
+            <p>
+                Artist. Specializing in oil painting. Will make you feel better when you are sad.
+                Never makes
+                mistakes, only happy accidents.
+            </p>
+            <p>
+                Joined July 2023
+            </p>
+            <p>
+                <strong>123</strong> Following
+                <strong>234</strong> Followers
+            </p>
+
+            <ul>
+                <li>
+                    <a href="tuit.html">Tuits</a>
+                </li>
+                <li>
+                    <a href="tuits-and-replies.html">Tuits & Replies</a>
+                </li>
+                <li>
+                    <a href="media.html">Media</a>
+                </li>
+                <li>
+                    <a href="likes.html">Likes</a>
+                </li>
+            </ul>
+
+        </td>
+
+        <td>
+
+            <!-- right sidebar -->
+
+        </td>
+
+    </tr>
+
+    <tr valign="top">
+
+        <td colspan="3">
+
+            <!-- footer -->
+
+        </td>
+
+    </tr>
+
+    </tbody>
+
+</table>
+
+
 </body>
 </html>
