--- a/public/tuiter/navigation.html
+++ b/public/tuiter/navigation.html
@@ -1,10 +1,23 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <title>$Title$</title>
+    <meta charset="UTF-8">
+    <title>Navigation</title>
 </head>
 <body>
-$END$
+<h1>
+    Navigation
+</h1>
+
+<ul>
+    <li><a href="home.html">Home</a></li>
+    <li><a href="notifications.html">Notifications</a></li>
+    <li><a href="Bookmarks.html">Bookmarks</a></li>
+    <li><a href="Lists.html">Lists</a></li>
+    <li><a href="Profile.html">Profile</a></li>
+    <li><a href="Tuit.html">Tuit</a></li>
+    <li><a href="Reply.html">Reply</a></li>
+</ul>
+
 </body>
 </html>
