--- a/public/tuiter/tuit.html
+++ b/public/tuiter/tuit.html
@@ -1,10 +1,48 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <title>$Title$</title>
+    <meta charset="UTF-8">
+    <title>Tuit</title>
 </head>
 <body>
-$END$
+
+<a href="navigation.html">Back</a>
+
+<h1>
+    Tuiter
+</h1>
+
+<h2>
+    Tuit
+</h2>
+
+<img src="bob.jpg"
+     width="48px"
+     height="48px"/>
+
+<form id="textarea">
+    <textarea cols="20"
+              rows="2"
+              placeholder="What's happening?"
+    ></textarea>
+</form>
+
+<label for="who-can-reply">
+</label><br/>
+<select id="who-can-reply">
+    <option selected value="EVERYONE">Everyone can reply</option>
+    <option value="FOLLOWING">People you follow</option>
+    <option value="MENTIONED">Only people you mention</option>
+</select>
+
+<br/>
+<hr>
+
+<h2>File upload</h2>
+<input type="file"/>
+
+<button type="button">Tuit</button>
+<hr>
+
 </body>
 </html>
